[project]
name = "momentum-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "great-tables>=0.17.0",
    "marimo>=0.13.4",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "polars>=1.29.0",
    "polars-ds>=0.8.3",
    "seaborn>=0.13.2",
]
